# banktivity-stock-quote-sync

./: README.md  build.sbt
c/: CMakeLists.txt  README.md  log.h  main.c
clojure/: CHANGELOG.md  README.md  project.clj
clojure/doc/: intro.md
clojure/src/banktivity/stockquotesync/: core.clj
clojure/test/banktivity/stockquotesync/: core_test.clj
go/: .gitignore  Makefile  README.md  go.mod  go.sum  ibdownloadquote.go  ibdq.go  main.go  model.go
kotlin/: build.gradle.kts  native-image.sh  settings.gradle.kts
python/: README.md  ibdq_aiohttp.py  ibdq_dugong.py  ibdq_httpx.py
scala/: README.md  build.sbt
scala-akka-stream/: build.sbt
scala-akka-stream/src/main/resources/: logback.xml  reference.conf
scala/src/main/resources/: application.conf  logback.xml
src/main/scala/my/edu/clhs/banktivity/stockquotesync/: Main.scala
swift/: Makefile  Package.resolved  Package.swift  README.md
swift-rxswift/: Package.resolved  Package.swift
swift-rxswift/Sources/: Main.swift
swift-rxswift/Sources/Model/: Security.swift  SecurityID.swift  SecurityId.swift
swift-rxswift/Sources/SQLite/: Connection+Rx.swift
swift/Sources/: Main.swift
swift/Sources/Model/: Error.swift  Security.swift  StockPrice.swift  StockPrices.swift
swift/Sources/banktivity-stock-quote-sync-swift/: main.swift
swift/Sources/banktivity-stock-quote-sync-swift/Extension/: FileHandle+TextOutputStream.swift
swift/Tests/: LinuxMain.swift
swift/Tests/banktivity-stock-quote-sync-swiftTests/: XCTestManifests.swift  banktivity_stock_quote_sync_swiftTests.swift
(+7 files in other folders)
